Version 21 (24 January 2017)
- Syncing all swrls now restores Swrls backed up to swrl.co

Version 20 (13 January 2017)
- Undo snackbar no longer hides the navigation bar

Version 19 (12 January 2017)
- Loading the active list is more responsive

Version 18.4 (08 January 2017)
- List can handle opening view when 200+ swrls

Version 18.3 (08 January 2017)
- Fix issue on view where removing items displayed the wrong title