@@ -25,8 +25,8 @@ android {
         applicationId "co.swrl.list"
         minSdkVersion 22
         targetSdkVersion 25
-        versionCode 73
-        versionName "21.1"
+        versionCode 74
+        versionName "22"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
