@@ -1,3 +1,6 @@
+Version 22 (27 January 2017)
+- Add ability to respond to Swrls!
+
 Version 21 (24 January 2017)
 - Syncing all swrls now restores Swrls backed up to swrl.co
 
